--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ form { width: 100%; display: flex; flex-direction: column; gap: 15px; }
     background: rgba(255, 255, 255, 0.2); 
     transform: translateY(-5px); 
     box-shadow: 0 10px 20px rgba(0,0,0,0.2);
-    /* border-color: rgba(255,255,255,0.4); */
+    border-color: rgba(255,255,255,0.4);
 }
 
 .item-card i.icon { font-size: 4.5rem; margin-bottom: 15px; filter: drop-shadow(0 5px 5px rgba(0,0,0,0.2)); }
@@ -137,7 +137,7 @@ form { width: 100%; display: flex; flex-direction: column; gap: 15px; }
     text-align: center; width: 90%; white-space: nowrap; 
     overflow: hidden; text-overflow: ellipsis; 
     z-index: 2; 
-    background: rgba(0, 0, 0, 0.4); padding: 5px 10px; border-radius: 8px; backdrop-filter: blur(4px);
+    /* background: rgba(0, 0, 0, 0.4); padding: 5px 10px; border-radius: 8px; backdrop-filter: blur(4px); */
 }
 
 .del-btn { position: absolute; top: 10px; right: 10px; background: rgba(0,0,0,0.6); color: #ffadad; width: 30px; height: 30px; border-radius: 50%; display: none; align-items: center; justify-content: center; border: none; z-index: 10; cursor: pointer; transition: 0.2s;}
