--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ form { width: 100%; display: flex; flex-direction: column; gap: 15px; }
 .search-bar-pill i { color: #ccc; font-size: 1.1rem; }
 .search-bar-pill input { background: transparent; border: none; outline: none; color: white; width: 100%; margin-left: 15px; font-size: 1rem; }
 
-.header-info { margin-bottom: 25px; padding-left: 10px; display: flex; align-items: center; }
+.header-info { margin-top: 30px; margin-bottom: 70px; padding-left: 10px; display: flex; align-items: center; }
 .header-info h2 { font-size: 1.8rem; font-weight: 600; letter-spacing: 0.5px; }
 
 /* GRID FOLDER (POSISI TENGAH) */
@@ -102,7 +102,7 @@ form { width: 100%; display: flex; flex-direction: column; gap: 15px; }
     display: grid; 
     /* Grid Responsif tapi Rapi */
     grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); 
-    gap: 30px; 
+    gap: 40px; 
     align-content: start;
     /* PENTING: Folder mulai dari kiri tapi gridnya di tengah jika layar lebar */
     justify-content: center; 
